--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-frontend-dev-portfolio",
-  "homepage": "https://dorota1997.github.io/react-frontend-dev-portfolio/",
+  "homepage": "https://william-maillard.github.io/portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "react-switch": "^5.0.1",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.3.1"
@@ -43,8 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-devicon": "^1.2.14",
     "@iconify/icons-logos": "^1.0.12",
-    "@iconify/react": "^1.1.3",
+    "@iconify/react": "^1.1.4",
     "gh-pages": "^3.1.0",
     "sass": "^1.42.1"
   }
