--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^5.0.1",
     "react-switch": "^5.0.1",
     "react-typical": "^0.1.3",
-    "react-vertical-timeline-component": "^3.3.1"
+    "react-vertical-timeline-component": "^3.3.1",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
