--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
+    "react-cookie-banner": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-scripts": "^5.0.1",
