--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^5.3.3",
     "jquery": "^3.5.1",
+    "package.json": "^2.0.1",
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
+    "react-calendly": "^4.3.1",
     "react-cookie-banner": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-switch": "^5.0.1",
     "react-typical": "^0.1.3",
-    "react-vertical-timeline-component": "^3.3.1",
-    "webpack": "^4.42.0"
+    "react-vertical-timeline-component": "^3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,7 +53,7 @@
     "@iconify/icons-devicon": "^1.2.14",
     "@iconify/icons-logos": "^1.0.12",
     "@iconify/react": "^1.1.4",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^6.3.0",
     "sass": "^1.42.1"
   }
 }
