fix: calendly button

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -d build"
+    "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -d build -r https://$GH_TOKEN@github.com/william-maillard/portfolio.git"
   },
   "eslintConfig": {
     "extends": "react-app"
